[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "bit-bounds"
version = "0.1.0"
description = "Helper traits for const generic bitwise bounds"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/bit-bounds/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-assert = "1.0.0"